# slowdoctor-web

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEPLOY.md  HANDOFF-CODEX.md  HANDOFF.md  Makefile  README.md  REVIEW-CODEX.md  eslint.config.mjs  globals.css  next.config.ts  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yml
crates/build-site/: Cargo.toml
crates/build-site/src/: assets.rs  generators.rs  main.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/island-blog-filter/: Cargo.toml
crates/island-blog-filter/src/: main.rs
crates/site/: Cargo.toml
crates/site/src/: components.rs  data.rs  dates.rs  frontmatter.rs  lib.rs  markdown.rs  meta.rs  pages.rs  schema.rs  types.rs
crates/site/src/pages/: blog.rs  cv.rs  engineer.rs  home.rs  layout.rs  links.rs  mod.rs  not_found.rs  physician.rs
crates/tools/: Cargo.toml
public/: _headers  _redirects  robots.txt  sitemap.xml
scripts/: convert-md.cts  date-utils.cts  generate-feed.cts  generate-sitemap.cts  new-post.cts  tag-post.cts  validate.cts
src/: mdx-components.tsx
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/blog/: page.tsx
src/app/blog/[slug]/: page.tsx
src/app/cv/: page.tsx
src/app/engineer/: page.tsx
src/app/links/: page.tsx
src/app/physician/: page.tsx
src/components/: axis-bar.tsx  blog-list.tsx  json-ld.tsx  nav-links.tsx  social-icons.tsx
src/content/blog/: 2026-04-07-hello-world.md  2026-04-12-building-this-site.md  2026-06-05-from-nextjs-to-rust-for-no-good-reason.md  2026-06-05-from-nextjs-to-rust.md  hello-world.mdx
src/data/: doctor.ts  site.json
src/lib/: blog.ts  breadcrumbs.ts  config.ts  cv.ts  links.ts  metadata.ts  schema.ts
