[package]
name = "build-site"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "build-site"
path = "src/main.rs"

[dependencies]
leptos = { workspace = true, features = ["ssr"] }
site = { path = "../site", features = ["ssr"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
