[package]
name = "game"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "TextMetrics",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "DomRect",
  "AudioContext",
  "AudioDestinationNode",
  "AudioParam",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
]
