[package]
name = "island-blog-filter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "island-blog-filter"
path = "src/main.rs"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
site = { path = "../site", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }
