[package]
name = "site"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "site"
path = "src/lib.rs"

[features]
default = []
ssr = ["leptos/ssr"]
csr = ["leptos/csr"]

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
