[package]
name = "site"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "site"
path = "src/lib.rs"

[features]
default = []
# Server/build-time rendering: full page components + markdown loading.
ssr = ["leptos/ssr", "dep:comrak", "dep:walkdir", "dep:serde_yaml", "dep:time", "dep:regex"]
# Client-side island: only shared types + interactive components.
csr = ["leptos/csr"]

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
comrak = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
time = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
